Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-9847

option(recursive) does not work as intended

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 4.7.0
    • 4.7.0
    • Build tools: qmake
    • None
    • Tested with symbian-sbsv2 mkspec
    • 8295acce8b1ec3959bfd1d93028c31f49d5a5a67

    Description

      In 4.6, Symbian builds forced Option::recursive = true, but in 4.7 this has been removed and "option(recursive)" has been added to qmake.conf of symbian-abld and symbian-sbsv2 specs. However, this doesn't work. It appears that while the recursive is set properly by the option(recursive), QMakeProject::reset() is called many times from QMakeProject::init() and QMakeProject::read() between setting the recursive flag and its use in SubdirsMetaMakefileGenerator::init(). Since QMakeProject::reset() clears recursive flag, the initial setting of it is useless.

      Looks like clearing recursive flag needs to be moved from QMakeProject::reset() to elsewhere, if it is at all necessary.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            e0348803 Miikka Heikkinen
            e0348803 Miikka Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes