Fix option(recursive)

QMakeProject::init initializes the whole project, while
QMakeProject::reset initializes the parser for a single file.
"recursive" needs to apply to the whole project.

Task-number: QTBUG-9847
Reviewed-by: Oswald Buddenhagen
(cherry picked from commit 8295acce8b1ec3959bfd1d93028c31f49d5a5a67)